--- a/androidPlugin/resources/META-INF/plugin.xml
+++ b/androidPlugin/resources/META-INF/plugin.xml
@@ -18,7 +18,7 @@
     </change-notes>
 
     <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html for description -->
-    <idea-version since-build="141.0"/>
+    <idea-version since-build="161.0"/>
     <!--<idea-version since-build="145.1617.8"/>-->
     <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html
          on how to target different products -->
@@ -33,8 +33,8 @@
     <!--Action注册，比如在某个菜单下增加一个按钮就要在这注册 -->
     <actions>
         <!-- Add your actions here -->
-        <action id="ModuleSetMain" class="com.maihaoche.mazda.actions.ActionModuleSet"
-                text="module切换" description="set the module"
+        <action id="AllModuleId" class="com.maihaoche.mazda.actions.ActionModuleSet"
+                text="toSingleModule" description="convert the modules"
                 icon="/icons/ic_launcher.png"
         >
             <add-to-group group-id="ToolsMenu" anchor="first"/>
@@ -42,4 +42,5 @@
             <!--<keyboard-shortcut keymap="$default" first-keystroke="shift M"/>-->
         </action>
     </actions>
+
 </idea-plugin>
