删除无用的注释。

--- a/androidPlugin/resources/META-INF/plugin.xml
+++ b/androidPlugin/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin version="2">
     <id>com.maihaoche.mazda</id>
     <name>Mazda</name>
-    <version>1.0</version>
+    <version>2.0</version>
     <vendor email="yangyang1@maihaoche.com" url="http://b.maihaoche.com/">MaiHaoChe.</vendor>
 
     <!--插件简介-->
@@ -21,9 +21,15 @@
 
     <!-- 版本更新信息-->
     <change-notes><![CDATA[
-      Version 1.0
-      As initially published,the plugin achieve the feature by a build in gradle task defined in our own project.
-      The next version would make it commonly configurable and useful.<br>
+      Version 2.0
+      This Version make big changes of the UI and make all the functions configurable.Two main functions are completed:
+      1. Choose one single module as the application main module and choose several submodules as AAR dependents located in libs folder. This function need a gradle task defined
+      in the build.gradle in root to change related values in gradle.properties , build the AAR file and move to main libs folder. The task and its related properties names
+      are configurable. Every setting of the single main module with dependent aar is cached and shown as an action in tools menu. This cache can be cleared with configure action.
+      2. Convert the whole project to all modules included in settings.gradle. Also need a task included in the build.gradle in root.
+      This primary plugin is now available.
+      Next goal is to merge all the tasks into our plugin. Hope this would not be hard.
+      <br>
       <em>MaiHaoChe</em>
     ]]>
     </change-notes>
